<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mathe</string>
    <string name="menu">Menú Principal</string>
    <string name="hello_world">Esto es una prueba</string>
    <string name="action_settings">Settings</string>
    <string name="funcion"></string>
    <string name="vacio"></string>
    <string name="Area">Area</string>
    <string name="Interseccion">Interseccion</string>
    <string name="Normal">Normal</string>
    <string name="Grafica3D">3D</string>
    <string name="Grafica4D">4D</string>
    <string name="Agregar">Agregar</string>
    <string name="btn_graficador">Graficador 2D</string>
    <string name="btn_geometria">Geometría Analítica</string>
    <string name="btn_geometriaplana">Geometría Plana</string>
    <string name="btn_figurascomb">Figuras Combinadas</string>
    <string name="btn_vectores">Vectores</string>
    <string name="btn_ecuaciones">Calculadora</string>
    <string name="btn_sistecua">Sistema de Ecuaciones</string>
    <string name="btn_graficar">Graficar</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_x">x</string>
    <string name="btn_y">y</string>
    <string name="btn_z">z</string>
    <string name="btn_w">w</string>
    <string name="btn_a">a</string>
    <string name="btn_b">b</string>
    <string name="btn_c">c</string>
    <string name="btn_d">d</string>
    <string name="btn_del">DEL</string>
    <string name="btn_division">/</string>
    <string name="btn_multiplicacion">*</string>
    <string name="btn_resta">-</string>
    <string name="btn_suma">+</string>
    <string name="btn_igual">=</string>
    <string name="btn_punto">.</string>
    <string name="btn_puntoycoma">;</string>
    <string name="btn_coma">,</string>
    <string name="btn_eleva">^</string>
    <string name="btn_sen">sen</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_ln">ln</string>
    <string name="btn_e">e</string>
    <string name="btn_sqrt">sqrt</string>
    <string name="btn_parizq">(</string>
    <string name="btn_parder">)</string>
    <string name="btn_solve">solve</string>
    <string name="btn_diff">diff</string>
    <string name="btn_graph">graph</string>
    <string name="image_geometria_circunferencia">Circunferencia</string>
    <string name="title_activity_graficador">Graficador 2D</string>
    <string name="title_activity_geometria">Geometria Analitica</string>
    <string name="title_fragment_general">General</string>
    <string name="title_fragment_circunferencia">Circunferencia</string>
    <string name="title_fragment_parabola">Parabola</string>
    <string name="title_fragment_elipse">Elipse</string>
    <string name="title_fragment_hiperbola">Hiperbola</string>
    <string name="title_fragment_circulo">Circulo</string>
    <string name="title_fragment_rectangulo">Rectangulo</string>
    <string name="title_fragment_triangulo">Triangulo</string>
    <string name="title_fragment_trapecio">Trapecio</string>
    <string name="fragment_coef_a">A</string>
    <string name="fragment_coef_b">B</string>
    <string name="fragment_coef_c">C</string>
    <string name="fragment_coef_d">D</string>
    <string name="fragment_coef_e">E</string>
    <string name="fragment_coef_f">F</string>
    <string name="fragment_coef_h">H</string>
    <string name="fragment_coef_k">K</string>
    <string name="fragment_coef_r">R</string>
    <string name="fragment_coef_distA">A</string>
    <string name="fragment_coef_distB">B</string>
    <string name="fragment_coef_p">P</string>
    <string name="fragment_coef_a_value"></string>
    <string name="fragment_coef_b_value"></string>
    <string name="fragment_coef_c_value"></string>
    <string name="fragment_coef_d_value"></string>
    <string name="fragment_coef_e_value"></string>
    <string name="fragment_coef_f_value"></string>
    <string name="fragment_coef_h_value"></string>
    <string name="fragment_coef_k_value"></string>
    <string name="fragment_coef_r_value"></string>
    <string name="fragment_coef_distA_value"></string>
    <string name="fragment_coef_distB_value"></string>
    <string name="fragment_coef_p_value"></string>
    <string name="fragment_geometria_ecuagen">Ax^2+Cy^2+Dx+Ey+F=0</string>
    <string name="title_activity_calculadora">Calculadora</string>
    <string name="title_activity_sist_ecua">Sistema de Ecuaciones</string>
    <string name="title_activity_graficador3d">Graficador 3D</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_geometria_plana">Geometria Plana</string>
    <string name="txtView_Radio">Radio</string>
    <string name="txtView_Angulo">Angulo</string>
    <string name="txtView_Area_Segmento">Area Segmento</string>
    <string name="txtView_Area">Area</string>
    <string name="txtView_Perimetro">Perimetro</string>
    <string name="txtView_Area_Sector">Area Sector</string>
    <string name="txtView_LadoA">Lado A</string>
    <string name="txtView_LadoB">Lado B</string>
    <string name="txtView_LadoC">Lado C</string>
    <string name="txtView_AnguloAlfa">Angulo Alfa</string>
    <string name="txtView_AnguloBeta">Angulo Beta</string>
    <string name="txtView_AnguloTeta">Angulo Teta</string>
    <string name="txtView_Altura">Altura</string>
    <string name="txtView_Diagonal">Diagonal</string>
    <string name="title_activity_geometria_comb">Figuras Combinadas</string>
    <string name="title_activity_vectores">Vectores</string>
    <string name="perimetro">Perimetro</string>

</resources>
