<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ug.mathe.SistEcuaActivity" >

    <EditText
        android:id="@+id/txtexpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="none"
        android:text="@string/vacio"
        android:singleLine="true"
         >

        <requestFocus />
    </EditText>
    
        <Button
            android:id="@+id/btn_x"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:text="@string/btn_x" />
        
        <Button
            android:id="@+id/btn_y"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_alignBaseline="@+id/btn_x"
            android:layout_alignBottom="@+id/btn_x"
            android:layout_toRightOf="@+id/btn_x"            
            android:text="@string/btn_y" />
        
        <Button
            android:id="@+id/btn_z"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_alignBaseline="@+id/btn_y"
            android:layout_alignBottom="@+id/btn_y"
            android:layout_toRightOf="@+id/btn_y"            
            android:text="@string/btn_z" />        
    
        <Button
            android:id="@+id/btn_w"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_alignBaseline="@+id/btn_z"
            android:layout_alignBottom="@+id/btn_z"
            android:layout_toRightOf="@+id/btn_z"            
            android:text="@string/btn_w" />        
        <Button
            android:id="@+id/btn_a"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_x"
            android:layout_alignRight="@+id/btn_x"
            android:layout_below="@+id/btn_x"            
            android:text="@string/btn_a" />
        
        <Button
            android:id="@+id/btn_b"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_y"
            android:layout_alignRight="@+id/btn_y"
            android:layout_below="@+id/btn_y"  
            android:text="@string/btn_b" />
        
        <Button
            android:id="@+id/btn_c"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_z"
            android:layout_alignRight="@+id/btn_z"
            android:layout_below="@+id/btn_z"  
            android:text="@string/btn_c" />   
            
        <Button
            android:id="@+id/btn_d"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_w"
            android:layout_alignRight="@+id/btn_w"
            android:layout_below="@+id/btn_w"  
            android:text="@string/btn_d" />
        
        <Button
            android:id="@+id/btn_parizq"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_sen"
            android:layout_alignRight="@+id/btn_sen"
            android:layout_below="@+id/btn_sen"
            android:text="@string/btn_parizq" /> 
            
        <Button
            android:id="@+id/btn_parder"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/btn_cos"
            android:layout_alignLeft="@+id/btn_cos"
            android:layout_alignRight="@+id/btn_cos"
            android:text="@string/btn_parder" />
        
        <Button
            android:id="@+id/btn_eleva"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/btn_tan"
            android:layout_alignLeft="@+id/btn_tan"
            android:layout_alignRight="@+id/btn_tan"
            android:text="@string/btn_eleva" />
        
        <Button
            android:id="@+id/btn_e"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/btn_ln"
            android:layout_alignLeft="@+id/btn_ln"
            android:layout_alignRight="@+id/btn_ln"
            android:text="@string/btn_e" />        
    
        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/btn_parizq"  
            android:layout_alignLeft="@+id/btn_parizq"
            android:layout_alignRight="@+id/btn_parizq"          
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/btn_parder"  
            android:layout_alignLeft="@+id/btn_parder"
            android:layout_alignRight="@+id/btn_parder"     
            android:text="@string/btn_8" />
        
        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/btn_eleva"  
            android:layout_alignLeft="@+id/btn_eleva"
            android:layout_alignRight="@+id/btn_eleva"  
            android:text="@string/btn_9" />
        
        <Button
            android:id="@+id/btn_division"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@+id/btn_e"  
            android:layout_alignLeft="@+id/btn_e"
            android:layout_alignRight="@+id/btn_e"
            android:text="@string/btn_division" />        

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_7"
            android:layout_alignRight="@+id/btn_7"
            android:layout_below="@+id/btn_7"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_8"
            android:layout_alignRight="@+id/btn_8"
            android:layout_below="@+id/btn_8"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_9"
            android:layout_alignRight="@+id/btn_9"
            android:layout_below="@+id/btn_9"
            android:text="@string/btn_6" />
        
        <Button
            android:id="@+id/btn_multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_division"
            android:layout_alignRight="@+id/btn_division"
            android:layout_below="@+id/btn_division"
            android:text="@string/btn_multiplicacion" />        

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_4"
            android:layout_alignRight="@+id/btn_4"
            android:layout_below="@+id/btn_4"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_5"
            android:layout_alignRight="@+id/btn_5"
            android:layout_below="@+id/btn_5"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_6"
            android:layout_alignRight="@+id/btn_6"
            android:layout_below="@+id/btn_6"
            android:text="@string/btn_3" />
        
        <Button
            android:id="@+id/btn_resta"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_multiplicacion"
            android:layout_alignRight="@+id/btn_multiplicacion"
            android:layout_below="@+id/btn_multiplicacion"
            android:text="@string/btn_resta" />        

        <Button
            android:id="@+id/btn_punto"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_1"
            android:layout_alignRight="@+id/btn_1"
            android:layout_below="@+id/btn_1"
            android:text="@string/btn_punto" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_2"
            android:layout_alignRight="@+id/btn_2"
            android:layout_below="@+id/btn_2"
            android:text="@string/btn_0" />

        <Button
            android:id="@+id/btn_igual"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_3"
            android:layout_alignRight="@+id/btn_3"
            android:layout_below="@+id/btn_3"
            android:text="@string/btn_igual" />

        <Button
            android:id="@+id/btn_suma"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_resta"
            android:layout_alignRight="@+id/btn_resta"
            android:layout_below="@+id/btn_resta"
            android:text="@string/btn_suma" />
        
        <Button
            android:id="@+id/btn_solve"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_punto"
            android:layout_alignRight="@+id/btn_0"
            android:layout_below="@+id/btn_punto"
            android:text="@string/btn_solve" />
        
        <Button
            android:id="@+id/btn_diff"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_igual"
            android:layout_alignRight="@+id/btn_igual"
            android:layout_below="@+id/btn_igual"
            android:text="@string/btn_diff" />        
        
        <Button
            android:id="@+id/btn_graph"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/btn_suma"
            android:layout_alignRight="@+id/btn_suma"
            android:layout_below="@+id/btn_igual"
            android:text="@string/btn_graph" />         


</RelativeLayout>
