<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ug.mathe.MainActivity" >

    <Button
        android:id="@+id/btn_graficador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/btn_graficador" />

    <Button
        android:id="@+id/btn_geometria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_graficador"
        android:layout_below="@+id/btn_graficador"
        android:layout_marginTop="16dp"
        android:text="@string/btn_geometria" />

    <Button
        android:id="@+id/btn_ecuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_geometria"
        android:layout_below="@+id/btn_geometria"
        android:layout_marginTop="24dp"
        android:text="@string/btn_ecuaciones" />
    
    <Button
        android:id="@+id/btn_sistecua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_ecuaciones"
        android:layout_below="@+id/btn_ecuaciones"
        android:layout_marginTop="24dp"
        android:text="@string/btn_sistecua" />    


</RelativeLayout>
